--- a/packages/bundler-webpack/package.json
+++ b/packages/bundler-webpack/package.json
@@ -71,7 +71,6 @@
     "speed-measure-webpack-plugin": "1.5.0",
     "style-loader": "3.3.1",
     "svgo-loader": "3.0.0",
-    "tapable": "2.2.1",
     "terser": "5.12.1",
     "terser-webpack-plugin": "5.3.1",
     "url-loader": "4.1.1",
@@ -111,7 +110,6 @@
       "style-loader",
       "speed-measure-webpack-plugin",
       "svgo-loader",
-      "tapable",
       "terser",
       "terser-webpack-plugin",
       "url-loader",
@@ -134,7 +132,7 @@
       "less": "@umijs/bundler-utils/compiled/less",
       "cssnano": "$$LOCAL",
       "postcss": "postcss",
-      "tapable": "$$LOCAL",
+      "tapable": "@umijs/bundler-utils/compiled/tapable",
       "terser": "$$LOCAL",
       "terser-webpack-plugin": "$$LOCAL",
       "typescript": "typescript",
