feat: 支持vue 框架 (#620)
* feat(vue): add renderer-vue

* feat(vue): add preset-vue

* chore(preset-vue): code style

* refactor(preset-vue): vue-loader change import method

* chore(preset-vue): code style

* chore(preset-vue): code style

* refactor(vue): code structure adjustment

* feat(vue): renderer-vue import using source code

* feat(preset-vue): refactoring webpack

* feat(preset-vue): remove cssRules

* chore(preset-vue): remove useless dependencies

* refactor(preset-vue): webpack rule dependencies are extracted into bundler-webpack & optimize tmpFiles

* chore(preset-vue): remove useless dependencies

* chore: prettierignore update

Co-authored-by: xierenhong <xierenhong@kuaishou.com>
Co-authored-by: xierenhong <renhong.xrh@gmail.com>

--- a/packages/bundler-webpack/compiled/webpack/package.json
+++ b/packages/bundler-webpack/compiled/webpack/package.json
@@ -1,5 +1,1 @@
-{
-  "name": "webpack",
-  "author": "Tobias Koppers @sokra",
-  "types": "types.d.ts"
-}
+{"name":"webpack","author":"Tobias Koppers @sokra","license":"MIT","types":"types.d.ts"}
