--- a/packages/renderer-react/package.json
+++ b/packages/renderer-react/package.json
@@ -18,7 +18,8 @@
   "scripts": {
     "build": "pnpm tsc",
     "build:deps": "pnpm esno ../../scripts/bundleDeps.ts",
-    "dev": "pnpm build -- --watch"
+    "dev": "pnpm build -- --watch",
+    "test": "jest -c ../../jest.turbo.config.ts"
   },
   "dependencies": {
     "@loadable/component": "5.15.2",
