--- a/examples/bundler-vite-demo/package.json
+++ b/examples/bundler-vite-demo/package.json
@@ -8,9 +8,9 @@
   "dependencies": {
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
-    "@umijs/bundler-vite": "4.0.0-canary.20220418.2",
+    "@umijs/bundler-vite": "4.0.0-rc.13",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "umi": "4.0.0-canary.20220418.2"
+    "umi": "4.0.0-rc.13"
   }
 }
