--- a/examples/bundler-webpack-demo/package.json
+++ b/examples/bundler-webpack-demo/package.json
@@ -12,6 +12,6 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
-    "umi": "4.0.0-canary.20220418.2"
+    "umi": "4.0.0-rc.13"
   }
 }
