--- a/packages/plugin-docs/package.json
+++ b/packages/plugin-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/plugin-docs",
-  "version": "4.0.0-rc.13",
+  "version": "4.0.0-canary.20220421.1",
   "description": "@umijs/plugin-docs",
   "homepage": "https://github.com/umijs/umi-next/tree/master/packages/plugin-docs#readme",
   "bugs": "https://github.com/umijs/umi-next/issues",
@@ -39,7 +39,7 @@
     "rehype-slug": "5.0.1",
     "remark-gfm": "^3.0.1",
     "tailwindcss": "^3.0.23",
-    "umi": "4.0.0-rc.13"
+    "umi": "4.0.0-canary.20220421.1"
   },
   "publishConfig": {
     "access": "public"
