chore: disable turbo for test

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "release": "esno scripts/release.ts",
     "setup:webstorm": "esno scripts/setupWebStorm.ts",
     "sync:tnpm": "esno scripts/syncTnpm.ts",
-    "test": "esno scripts/turbo.ts --cmd test --parallel",
+    "test": "jest",
     "test:clean": "esno scripts/turbo.ts --cmd test --no-cache --parallel -- --clearCache",
     "test:e2e": "jest --config jest.e2e.config.ts",
     "tsc:check": "tsc --noEmit",
