chore: independent scripts pkg (#665)
* chore: migrate to dependent scripts pkg

* chore: migrate `build:deps` script

* feat: check `build:deps` script exist

* feat: add umi-scripts pkg.json

* fix: root path

* chore: code style

* chore: move `scripts/src/*` to `scripts/*`

--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
   "private": true,
   "scripts": {
-    "bootstrap": "esno scripts/bootstrap.ts",
-    "build": "esno scripts/turbo.ts --cmd build",
-    "build:client": "esno scripts/turbo.ts --cmd build:client",
-    "build:extra": "esno scripts/turbo.ts --cmd build:extra",
-    "build:force": "esno scripts/turbo.ts --cmd build --no-cache",
-    "build:release": "esno scripts/turbo.ts --cmd build --no-cache -- --declarationMap false",
-    "check:packageFiles": "esno scripts/checkPackageFiles.ts",
+    "bootstrap": "umi-scripts bootstrap",
+    "build": "umi-scripts turbo --cmd build",
+    "build:client": "umi-scripts turbo --cmd build:client",
+    "build:extra": "umi-scripts turbo --cmd build:extra",
+    "build:force": "umi-scripts turbo --cmd build --no-cache",
+    "build:release": "umi-scripts turbo --cmd build --no-cache -- --declarationMap false",
+    "check:packageFiles": "umi-scripts checkPackageFiles",
     "dep:update": "pnpm up --interactive --latest --recursive",
-    "dev": "esno scripts/turbo.ts --cmd dev",
+    "dev": "umi-scripts turbo --cmd dev",
     "doc:build": "pnpm doc:deps && umi build",
     "doc:deps": "pnpm doc:deps-ts && pnpm doc:deps-extra",
-    "doc:deps-extra": "esno scripts/turbo.ts --cmd build:extra --filter @umijs/plugin-docs...",
-    "doc:deps-ts": "esno scripts/turbo.ts --cmd build --filter @umijs/plugin-docs...",
+    "doc:deps-extra": "umi-scripts turbo --cmd build:extra --filter @umijs/plugin-docs...",
+    "doc:deps-ts": "umi-scripts turbo --cmd build --filter @umijs/plugin-docs...",
     "doc:dev": "umi dev",
     "format": "prettier --write .",
     "format:docs": "prettier 'docs/**/*.{md,mdx}' --write --ignore-path .gitignore --ignore-unknown",
     "format:plugin-docs": "prettier 'packages/plugin-docs/**/*' --write --ignore-unknown",
     "preinstall": "npx only-allow pnpm",
-    "postinstall": "esno scripts/postinstall.ts",
+    "postinstall": "umi-scripts postinstall",
     "jest": "jest",
     "prepare": "husky install",
-    "release": "esno scripts/release.ts",
-    "setup:webstorm": "esno scripts/setupWebStorm.ts",
-    "sync:tnpm": "esno scripts/syncTnpm.ts",
+    "release": "umi-scripts release",
+    "setup:webstorm": "umi-scripts setupWebStorm",
+    "sync:tnpm": "umi-scripts syncTnpm",
     "test": "jest",
-    "test:clean": "esno scripts/turbo.ts --cmd test --no-cache --parallel -- --clearCache",
+    "test:clean": "umi-scripts turbo --cmd test --no-cache --parallel -- --clearCache",
     "test:e2e": "jest --config jest.e2e.config.ts",
     "tsc:check": "tsc --noEmit",
     "turbo:clean": "rimraf .turbo"
@@ -81,6 +81,7 @@
     "typescript": "^4.6.3",
     "uglify-js": "^3.15.4",
     "umi": "workspace:*",
+    "umi-scripts": "workspace:*",
     "zx": "^4.3.0"
   },
   "packageManager": "pnpm@6.20.0",
