--- a/packages/father/package.json
+++ b/packages/father/package.json
@@ -20,7 +20,7 @@
   ],
   "scripts": {
     "build": "pnpm tsc",
-    "build:deps": "pnpm esno ../../scripts/bundleDeps.ts",
+    "build:deps": "umi-scripts bundleDeps",
     "dev": "pnpm build -- --watch"
   },
   "dependencies": {
