--- a/packages/preset-vue/package.json
+++ b/packages/preset-vue/package.json
@@ -18,7 +18,7 @@
   ],
   "scripts": {
     "build": "pnpm tsc",
-    "build:deps": "pnpm esno ../../scripts/bundleDeps.ts",
+    "build:deps": "umi-scripts bundleDeps",
     "dev": "pnpm build -- --watch"
   },
   "dependencies": {
