--- a/packages/renderer-vue/package.json
+++ b/packages/renderer-vue/package.json
@@ -17,7 +17,7 @@
   ],
   "scripts": {
     "build": "pnpm tsc",
-    "build:deps": "pnpm esno ../../scripts/bundleDeps.ts",
+    "build:deps": "umi-scripts bundleDeps",
     "dev": "pnpm build -- --watch"
   },
   "peerDependencies": {
