--- a/examples/lint/package.json
+++ b/examples/lint/package.json
@@ -14,6 +14,6 @@
   "devDependencies": {
     "eslint": "^8.13.0",
     "stylelint": "^14.7.1",
-    "umi": "4.0.0-rc.10"
+    "umi": "4.0.0-canary.20220427.1"
   }
 }
