example(with-react-17): update name

--- a/examples/with-react-17/package.json
+++ b/examples/with-react-17/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@example/boilerplate",
+  "name": "@example/with-react-17",
   "private": true,
   "scripts": {
     "build": "umi build",
