--- a/packages/umi/package.json
+++ b/packages/umi/package.json
@@ -43,6 +43,7 @@
     "@umijs/lint": "4.0.0-canary.20220428.1",
     "@umijs/preset-umi": "4.0.0-canary.20220428.1",
     "@umijs/renderer-react": "4.0.0-canary.20220428.1",
+    "@umijs/server": "4.0.0-canary.20220428.1",
     "@umijs/test": "4.0.0-canary.20220428.1",
     "@umijs/utils": "4.0.0-canary.20220428.1",
     "prettier-plugin-organize-imports": "^2.3.4",
