fix: 🚑 默认带 src 目录，tsconifg alias 保持一致 (#716)
Co-authored-by: pshu <pishu.spf@antfin.com>

--- a/packages/create-umi/templates/app/tsconfig.json
+++ b/packages/create-umi/templates/app/tsconfig.json
@@ -10,8 +10,8 @@
     "baseUrl": ".",
     "strict": true,
     "paths": {
-      "@/*": ["*"],
-      "@@/*": [".umi/*"]
+      "@/*": ["src/*"],
+      "@@/*": ["src/.umi/*"]
     },
     "allowSyntheticDefaultImports": true
   }
