--- a/packages/bundler-utils/package.json
+++ b/packages/bundler-utils/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "@umijs/utils": "4.0.0-rc.14",
     "esbuild": "0.14.36",
-    "regenerate-unicode-properties": "10.0.1"
+    "regenerate-unicode-properties": "10.0.1",
+    "spdy": "^4.0.2"
   },
   "devDependencies": {
     "@babel/code-frame": "7.16.7",
@@ -52,6 +53,7 @@
     "@types/babel__template": "7.4.1",
     "@types/babel__traverse": "7.17.0",
     "@types/less": "3.0.3",
+    "@types/spdy": "^3.4.5",
     "cjs-module-lexer": "1.2.2",
     "es-module-lexer": "0.10.5",
     "express": "4.17.3",
