--- a/examples/with-dva/package.json
+++ b/examples/with-dva/package.json
@@ -8,7 +8,7 @@
     "start": "npm run dev"
   },
   "dependencies": {
-    "@umijs/plugins": "4.0.0-rc.14",
-    "umi": "4.0.0-rc.14"
+    "@umijs/plugins": "4.0.0-canary.20220429.1",
+    "umi": "4.0.0-canary.20220429.1"
   }
 }
