--- a/packages/bundler-webpack/package.json
+++ b/packages/bundler-webpack/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/bundler-webpack",
-  "version": "4.0.0-rc.14",
+  "version": "4.0.0-canary.20220429.1",
   "description": "@umijs/bundler-webpack",
   "homepage": "https://github.com/umijs/umi-next/tree/master/packages/bundler-webpack#readme",
   "bugs": "https://github.com/umijs/umi-next/issues",
@@ -35,10 +35,10 @@
     "@svgr/plugin-jsx": "^6.2.1",
     "@svgr/plugin-svgo": "^6.2.0",
     "@types/hapi__joi": "17.1.8",
-    "@umijs/babel-preset-umi": "4.0.0-rc.14",
-    "@umijs/bundler-utils": "4.0.0-rc.14",
-    "@umijs/mfsu": "4.0.0-rc.14",
-    "@umijs/utils": "4.0.0-rc.14",
+    "@umijs/babel-preset-umi": "4.0.0-canary.20220429.1",
+    "@umijs/bundler-utils": "4.0.0-canary.20220429.1",
+    "@umijs/mfsu": "4.0.0-canary.20220429.1",
+    "@umijs/utils": "4.0.0-canary.20220429.1",
     "css-loader": "6.7.1",
     "es5-imcompatible-versions": "^0.1.73",
     "jest-worker": "27.5.1",
