--- a/packages/umi/package.json
+++ b/packages/umi/package.json
@@ -1,6 +1,6 @@
 {
   "name": "umi",
-  "version": "4.0.0-rc.14",
+  "version": "4.0.0-canary.20220429.1",
   "description": "umi",
   "homepage": "https://github.com/umijs/umi-next/tree/master/packages/umi#readme",
   "bugs": "https://github.com/umijs/umi-next/issues",
@@ -37,15 +37,15 @@
     "test": "umi-scripts jest-turbo"
   },
   "dependencies": {
-    "@umijs/bundler-utils": "4.0.0-rc.14",
-    "@umijs/bundler-webpack": "4.0.0-rc.14",
-    "@umijs/core": "4.0.0-rc.14",
-    "@umijs/lint": "4.0.0-rc.14",
-    "@umijs/preset-umi": "4.0.0-rc.14",
-    "@umijs/renderer-react": "4.0.0-rc.14",
-    "@umijs/server": "4.0.0-rc.14",
-    "@umijs/test": "4.0.0-rc.14",
-    "@umijs/utils": "4.0.0-rc.14",
+    "@umijs/bundler-utils": "4.0.0-canary.20220429.1",
+    "@umijs/bundler-webpack": "4.0.0-canary.20220429.1",
+    "@umijs/core": "4.0.0-canary.20220429.1",
+    "@umijs/lint": "4.0.0-canary.20220429.1",
+    "@umijs/preset-umi": "4.0.0-canary.20220429.1",
+    "@umijs/renderer-react": "4.0.0-canary.20220429.1",
+    "@umijs/server": "4.0.0-canary.20220429.1",
+    "@umijs/test": "4.0.0-canary.20220429.1",
+    "@umijs/utils": "4.0.0-canary.20220429.1",
     "prettier-plugin-organize-imports": "^2.3.4",
     "prettier-plugin-packagejson": "^2.2.17"
   },
