chore: fix client tsconfig.json

--- a/packages/bundler-webpack/tsconfig.client.json
+++ b/packages/bundler-webpack/tsconfig.client.json
@@ -4,6 +4,7 @@
     "declaration": false,
     "declarationMap": false,
     "module": "esnext",
+    "target": "es2015",
     "outDir": "./client",
     "rootDir": "./src"
   },
