--- a/packages/bundler-vite/package.json
+++ b/packages/bundler-vite/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/bundler-vite",
-  "version": "4.0.0-canary.20220429.4",
+  "version": "4.0.0-rc.15",
   "description": "@umijs/bundler-vite",
   "homepage": "https://github.com/umijs/umi-next/tree/master/packages/bundler-vite#readme",
   "bugs": "https://github.com/umijs/umi-next/issues",
@@ -28,8 +28,8 @@
   },
   "dependencies": {
     "@svgr/core": "6.2.1",
-    "@umijs/bundler-utils": "4.0.0-canary.20220429.4",
-    "@umijs/utils": "4.0.0-canary.20220429.4",
+    "@umijs/bundler-utils": "4.0.0-rc.15",
+    "@umijs/utils": "4.0.0-rc.15",
     "@vitejs/plugin-react": "1.2.0",
     "postcss-preset-env": "7.4.3"
   },
