--- a/examples/bundler-vite-demo/package.json
+++ b/examples/bundler-vite-demo/package.json
@@ -8,9 +8,9 @@
   "dependencies": {
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
-    "@umijs/bundler-vite": "4.0.0-canary.20220429.4",
+    "@umijs/bundler-vite": "4.0.0-rc.15",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "umi": "4.0.0-canary.20220429.4"
+    "umi": "4.0.0-rc.15"
   }
 }
