--- a/packages/renderer-vue/package.json
+++ b/packages/renderer-vue/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/renderer-vue",
-  "version": "4.0.0-canary.20220429.4",
+  "version": "4.0.0-rc.15",
   "description": "@umijs/renderer-vue",
   "homepage": "https://github.com/umijs/umi-next/tree/master/packages/renderer-vue#readme",
   "bugs": "https://github.com/umijs/umi-next/issues",
