--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/utils",
-  "version": "4.0.0-canary.20220429.4",
+  "version": "4.0.0-rc.15",
   "homepage": "https://github.com/umijs/umi-next/tree/master/packages/utils#readme",
   "bugs": "https://github.com/umijs/umi-next/issues",
   "repository": {
