--- a/examples/qiankun-slave/package.json
+++ b/examples/qiankun-slave/package.json
@@ -6,7 +6,7 @@
     "start": "npm run dev"
   },
   "dependencies": {
-    "@umijs/max": "4.0.0-rc.15",
+    "@umijs/max": "4.0.0-canary.202200505.1",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   }
