--- a/examples/with-unocss/package.json
+++ b/examples/with-unocss/package.json
@@ -7,9 +7,9 @@
     "start": "npm run dev"
   },
   "dependencies": {
-    "@umijs/plugins": "4.0.0-rc.15",
+    "@umijs/plugins": "4.0.0-canary.202200505.1",
     "@unocss/cli": "^0.31.6",
-    "umi": "4.0.0-rc.15",
+    "umi": "4.0.0-canary.202200505.1",
     "unocss": "^0.31.0"
   }
 }
