--- a/examples/with-valtio/package.json
+++ b/examples/with-valtio/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@types/three": "^0.139.0",
-    "umi": "4.0.0-rc.15",
+    "umi": "4.0.0-canary.202200505.1",
     "valtio": "^1.5.2"
   }
 }
