--- a/packages/mfsu/package.json
+++ b/packages/mfsu/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/mfsu",
-  "version": "4.0.0-rc.15",
+  "version": "4.0.0-canary.202200505.1",
   "description": "@umijs/mfsu",
   "homepage": "https://github.com/umijs/umi-next/tree/master/packages/mfsu#readme",
   "bugs": "https://github.com/umijs/umi-next/issues",
@@ -22,9 +22,9 @@
     "test": "umi-scripts jest-turbo"
   },
   "dependencies": {
-    "@umijs/bundler-esbuild": "4.0.0-rc.15",
-    "@umijs/bundler-utils": "4.0.0-rc.15",
-    "@umijs/utils": "4.0.0-rc.15",
+    "@umijs/bundler-esbuild": "4.0.0-canary.202200505.1",
+    "@umijs/bundler-utils": "4.0.0-canary.202200505.1",
+    "@umijs/utils": "4.0.0-canary.202200505.1",
     "enhanced-resolve": "5.9.2"
   },
   "devDependencies": {
