example: fix name

--- a/examples/with-use-model/package.json
+++ b/examples/with-use-model/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@example/with-model",
+  "name": "@example/with-use-model",
   "private": true,
   "scripts": {
     "build": "umi build",
