--- a/examples/with-use-model/package.json
+++ b/examples/with-use-model/package.json
@@ -8,7 +8,7 @@
     "start": "npm run dev"
   },
   "dependencies": {
-    "@umijs/plugins": "4.0.0-rc.15",
-    "umi": "4.0.0-rc.15"
+    "@umijs/plugins": "4.0.0-canary.20220506.1",
+    "umi": "4.0.0-canary.20220506.1"
   }
 }
