fix(plugin-qiankun): model generation should before model

--- a/examples/qiankun-slave/package.json
+++ b/examples/qiankun-slave/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "scripts": {
     "dev": "max dev",
+    "setup": "max setup",
     "start": "npm run dev"
   },
   "dependencies": {
