feat(react-18): Add react 18 support by webpack alias

--- a/packages/renderer-react/package.json
+++ b/packages/renderer-react/package.json
@@ -32,8 +32,8 @@
     "react-router-config": "5.1.1"
   },
   "peerDependencies": {
-    "react": "16.x || 17.x",
-    "react-dom": "16.x || 17.x"
+    "react": "16.x || 17.x || 18.x",
+    "react-dom": "16.x || 17.x || 18.x"
   },
   "module": "dist/index.esm.js"
 }
