feat(preset-vue): vue support vite mode (#664)
* feat(preset-vue): vue support vite mode

* feat(preset-vue): refactor vue vite support

* chore(preset-umi): remove useless code

* chore(preset-vue): fix deps

* chore: update pnpm-lock.yaml

* feat(preset-vue): plugin-vue pre deps

* chore(preset-vue): code style

* chore: update pnpm-lock.yaml

* chore: update vue-demo

* Update packages/preset-umi/src/features/tmpFiles/routes.ts

Co-authored-by: xierenhong <renhong.xrh@gmail.com>
Co-authored-by: xierenhong <xierenhong@kuaishou.com>
Co-authored-by: chencheng (云谦) <sorrycc@gmail.com>

--- a/packages/preset-vue/package.json
+++ b/packages/preset-vue/package.json
@@ -28,6 +28,7 @@
     "vue-router": "4.0.12"
   },
   "devDependencies": {
+    "@vitejs/plugin-vue": "2.3.1",
     "umi": "4.0.0-canary.20220506.4"
   },
   "publishConfig": {
@@ -35,5 +36,19 @@
   },
   "authors": [
     "chencheng <sorrycc@gmail.com> (https://github.com/sorrycc)"
-  ]
+  ],
+  "compiledConfig": {
+    "deps": [
+      "@vitejs/plugin-vue"
+    ],
+    "externals": {
+      "vue": "vue",
+      "vue/compiler-sfc": "vue/compiler-sfc",
+      "vite": "@umijs/bundler-vite/compiled/vite",
+      "esbuild": "@umijs/bundler-utils/compiled/esbuild"
+    },
+    "excludeDtsDeps": [
+      "@vitejs/plugin-vue"
+    ]
+  }
 }
