--- a/examples/vue-demo/package.json
+++ b/examples/vue-demo/package.json
@@ -13,5 +13,9 @@
     "umi": "4.0.0-canary.20220506.4",
     "vant": "3.4.8",
     "vue": "3.2.31"
+  },
+  "devDependencies": {
+    "babel-plugin-import": "^1.13.3",
+    "vite-plugin-style-import": "2.0.0"
   }
 }
