--- a/examples/with-recoil/package.json
+++ b/examples/with-recoil/package.json
@@ -7,7 +7,7 @@
     "start": "npm run dev"
   },
   "dependencies": {
-    "recoil": "^0.7.2",
+    "recoil": "^0.7.3-alpha.1",
     "umi": "4.0.0-canary.20220506.4"
   }
 }
