--- a/examples/boilerplate/package.json
+++ b/examples/boilerplate/package.json
@@ -9,6 +9,7 @@
     "start": "npm run dev"
   },
   "dependencies": {
+    "hoist-non-react-statics": "^3.3.2",
     "umi": "4.0.0-canary.20220507.2"
   }
 }
