--- a/examples/with-react-17/package.json
+++ b/examples/with-react-17/package.json
@@ -11,6 +11,6 @@
   "dependencies": {
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "umi": "4.0.0-canary.20220507.2"
+    "umi": "4.0.0-rc.16"
   }
 }
