--- a/examples/with-rematch/package.json
+++ b/examples/with-rematch/package.json
@@ -9,6 +9,6 @@
   "dependencies": {
     "@rematch/core": "^2.2.0",
     "react-redux": "^8.0.1",
-    "umi": "4.0.0-canary.20220507.2"
+    "umi": "4.0.0-rc.16"
   }
 }
