--- a/examples/with-tailwindcss/package.json
+++ b/examples/with-tailwindcss/package.json
@@ -7,8 +7,8 @@
     "start": "npm run dev"
   },
   "dependencies": {
-    "@umijs/plugins": "4.0.0-canary.20220507.2",
+    "@umijs/plugins": "4.0.0-rc.16",
     "tailwindcss": "^3.0.24",
-    "umi": "4.0.0-canary.20220507.2"
+    "umi": "4.0.0-rc.16"
   }
 }
