--- a/packages/max/package.json
+++ b/packages/max/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/max",
-  "version": "4.0.0-canary.20220507.2",
+  "version": "4.0.0-rc.16",
   "description": "@umijs/max",
   "homepage": "https://github.com/umijs/umi-next/tree/master/packages/pro#readme",
   "bugs": "https://github.com/umijs/umi-next/issues",
@@ -33,12 +33,12 @@
     "dev": "pnpm build -- --watch"
   },
   "dependencies": {
-    "@umijs/lint": "4.0.0-canary.20220507.2",
-    "@umijs/plugins": "4.0.0-canary.20220507.2",
+    "@umijs/lint": "4.0.0-rc.16",
+    "@umijs/plugins": "4.0.0-rc.16",
     "antd": "^4.20.2",
     "eslint": "8.15.0",
     "stylelint": "14.8.2",
-    "umi": "4.0.0-canary.20220507.2"
+    "umi": "4.0.0-rc.16"
   },
   "publishConfig": {
     "access": "public"
