--- a/packages/umi/package.json
+++ b/packages/umi/package.json
@@ -34,6 +34,7 @@
     "build:client": "pnpm tsc --project ./tsconfig.client.json",
     "build:deps": "umi-scripts bundleDeps",
     "dev": "pnpm build -- --watch",
+    "dev:client": "pnpm build:client -- --watch",
     "test": "umi-scripts jest-turbo"
   },
   "dependencies": {
