feat: log persistence (#782)
* feat: log persistence (#619)

* feat: log persistence

* chore: build dep

* chore: build pino

* chore: code style

* chore: improve logger

* chore: clean deps

* chore: code style

Co-authored-by: Zeno <513005627@qq.com>

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -21,7 +21,8 @@
     "test": "umi-scripts jest-turbo"
   },
   "dependencies": {
-    "chokidar": "3.5.3"
+    "chokidar": "3.5.3",
+    "pino": "7.10.0"
   },
   "devDependencies": {
     "@types/color": "3.0.3",
