--- a/examples/with-unstated/package.json
+++ b/examples/with-unstated/package.json
@@ -7,7 +7,7 @@
     "start": "npm run dev"
   },
   "dependencies": {
-    "umi": "4.0.0-canary.20220517.1",
+    "umi": "4.0.0-rc.18",
     "unstated-next": "^1.1.0"
   }
 }
