--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/core",
-  "version": "4.0.0-canary.20220517.1",
+  "version": "4.0.0-rc.18",
   "homepage": "https://github.com/umijs/umi-next/tree/master/packages/core#readme",
   "bugs": "https://github.com/umijs/umi-next/issues",
   "repository": {
@@ -21,8 +21,8 @@
     "test": "umi-scripts jest-turbo"
   },
   "dependencies": {
-    "@umijs/bundler-utils": "4.0.0-canary.20220517.1",
-    "@umijs/utils": "4.0.0-canary.20220517.1"
+    "@umijs/bundler-utils": "4.0.0-rc.18",
+    "@umijs/utils": "4.0.0-rc.18"
   },
   "devDependencies": {
     "@hapi/joi": "17.1.1",
