--- a/examples/max/package.json
+++ b/examples/max/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
-    "@umijs/max": "4.0.0-canary.20220525.2",
+    "@umijs/max": "4.0.0-rc.20",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   }
