--- a/examples/ant-design-pro/package.json
+++ b/examples/ant-design-pro/package.json
@@ -8,17 +8,17 @@
   "dependencies": {
     "@ant-design/charts": "^1.3.6",
     "@ant-design/icons": "4.7.0",
-    "@ant-design/pro-descriptions": "^1.10.70",
-    "@ant-design/pro-form": "^1.67.0",
-    "@ant-design/pro-layout": "next",
-    "@ant-design/pro-table": "^2.74.0",
+    "@ant-design/pro-descriptions": "^1.11.2",
+    "@ant-design/pro-form": "^1.69.0",
+    "@ant-design/pro-layout": "^7.0.1-beta.17",
+    "@ant-design/pro-table": "^2.76.0",
     "@antv/l7-react": "^2.3.9",
     "@umijs/max": "4.0.0-rc.20",
-    "ahooks": "^3.3.10",
-    "antd": "4.20.2",
+    "ahooks": "^3.4.0",
+    "antd": "4.20.6",
     "classnames": "^2.3.1",
     "dayjs": "^1.11.2",
-    "gg-editor": "2.0.4",
+    "gg-editor": "3.1.3",
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
     "moment": "^2.29.3",
@@ -26,6 +26,6 @@
     "monaco-editor-webpack-plugin": "^7.0.1",
     "numeral": "^2.0.6",
     "querystring": "^0.2.1",
-    "rc-util": "^5.21.2"
+    "rc-util": "^5.21.5"
   }
 }
