fix(bundler-vite): build error caused by rollup-plugin-visualizer pre deps (#836)
* fix(bundler-vite): build error caused by rollup-plugin-visualizer pre deps

* chore: fix tsc

Co-authored-by: xierenhong <xierenhong@kuaishou.com>

--- a/examples/vue-demo/package.json
+++ b/examples/vue-demo/package.json
@@ -2,6 +2,7 @@
   "name": "@example/vue-demo",
   "private": true,
   "scripts": {
+    "analyze": "ANALYZE=1 umi build",
     "build": "umi build",
     "dev": "umi dev",
     "preview": "umi preview",
