--- a/packages/bundler-vite/package.json
+++ b/packages/bundler-vite/package.json
@@ -31,7 +31,8 @@
     "@umijs/bundler-utils": "4.0.0-rc.20",
     "@umijs/utils": "4.0.0-rc.20",
     "@vitejs/plugin-react": "1.2.0",
-    "postcss-preset-env": "7.5.0"
+    "postcss-preset-env": "7.5.0",
+    "rollup-plugin-visualizer": "5.6.0"
   },
   "devDependencies": {
     "@types/caniuse-lite": "1.0.1",
@@ -41,7 +42,6 @@
     "caniuse-lite": "1.0.30001327",
     "rollup": "2.70.1",
     "rollup-plugin-copy": "3.4.0",
-    "rollup-plugin-visualizer": "5.6.0",
     "vite": "2.9.1"
   },
   "publishConfig": {
@@ -55,7 +55,6 @@
       "@vitejs/plugin-legacy",
       "caniuse-lite",
       "rollup-plugin-copy",
-      "rollup-plugin-visualizer",
       "vite"
     ],
     "externals": {
