--- a/examples/mfsu-esbuild-less-demo/package.json
+++ b/examples/mfsu-esbuild-less-demo/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@example/mfsu-esbuild-less-demo",
   "version": "1.0.0",
+  "private": true,
   "description": "",
   "license": "ISC",
   "author": "",
