--- a/examples/x-design/package.json
+++ b/examples/x-design/package.json
@@ -1,5 +1,9 @@
 {
   "name": "@example/x-design",
   "private": true,
-  "main": "./src/index.tsx"
+  "main": "./src/index.tsx",
+  "scripts": {
+    "start": "npm run dev"
+  },
+  "dependencies": {}
 }
