--- a/examples/mfsu-circular-dependency/package.json
+++ b/examples/mfsu-circular-dependency/package.json
@@ -10,6 +10,6 @@
     "@types/react-dom": "^18.0.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "umi": "4.0.0-rc.21"
+    "umi": "4.0.0-canary.20220606.1"
   }
 }
