--- a/examples/with-redux-toolkit/package.json
+++ b/examples/with-redux-toolkit/package.json
@@ -9,6 +9,6 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
     "react-redux": "^8.0.2",
-    "umi": "4.0.0-rc.21"
+    "umi": "4.0.0-canary.20220606.1"
   }
 }
