fix(plugin-initial-state): extra model namespace problem

--- a/examples/ant-design-pro/package.json
+++ b/examples/ant-design-pro/package.json
@@ -2,7 +2,9 @@
   "name": "@example/ant-design-pro",
   "private": true,
   "scripts": {
+    "build": "max build",
     "dev": "max dev",
+    "setup": "max setup",
     "start": "npm run dev"
   },
   "dependencies": {
