--- a/examples/bundler-webpack-demo/package.json
+++ b/examples/bundler-webpack-demo/package.json
@@ -12,6 +12,6 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
-    "umi": "4.0.0-canary.20220608.2"
+    "umi": "4.0.0-rc.22"
   }
 }
