--- a/examples/vue-demo/package.json
+++ b/examples/vue-demo/package.json
@@ -10,8 +10,8 @@
     "start": "npm run dev"
   },
   "dependencies": {
-    "@umijs/preset-vue": "4.0.0-canary.20220608.2",
-    "umi": "4.0.0-canary.20220608.2",
+    "@umijs/preset-vue": "4.0.0-rc.22",
+    "umi": "4.0.0-rc.22",
     "vant": "3.4.9",
     "vue": "3.2.36"
   },
