--- a/examples/with-use-model/package.json
+++ b/examples/with-use-model/package.json
@@ -8,7 +8,7 @@
     "start": "npm run dev"
   },
   "dependencies": {
-    "@umijs/plugins": "4.0.0-canary.20220608.2",
-    "umi": "4.0.0-canary.20220608.2"
+    "@umijs/plugins": "4.0.0-rc.22",
+    "umi": "4.0.0-rc.22"
   }
 }
