--- a/examples/with-vue-pinia/package.json
+++ b/examples/with-vue-pinia/package.json
@@ -9,9 +9,9 @@
     "start": "npm run dev"
   },
   "dependencies": {
-    "@umijs/preset-vue": "4.0.0-canary.20220608.2",
+    "@umijs/preset-vue": "4.0.0-rc.22",
     "pinia": "^2.0.14",
-    "umi": "4.0.0-canary.20220608.2",
+    "umi": "4.0.0-rc.22",
     "vue": "3.2.36"
   }
 }
