--- a/packages/ast/package.json
+++ b/packages/ast/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/ast",
-  "version": "4.0.0-canary.20220608.2",
+  "version": "4.0.0-rc.22",
   "description": "@umijs/ast",
   "homepage": "https://github.com/umijs/umi-next/tree/master/packages/ast#readme",
   "bugs": "https://github.com/umijs/umi-next/issues",
@@ -21,7 +21,7 @@
     "test": "umi-scripts jest-turbo"
   },
   "dependencies": {
-    "@umijs/bundler-utils": "4.0.0-canary.20220608.2"
+    "@umijs/bundler-utils": "4.0.0-rc.22"
   },
   "publishConfig": {
     "access": "public"
