--- a/packages/babel-preset-umi/package.json
+++ b/packages/babel-preset-umi/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/babel-preset-umi",
-  "version": "4.0.0-canary.20220608.2",
+  "version": "4.0.0-rc.22",
   "description": "Official babel preset for umi.",
   "homepage": "https://github.com/umijs/umi-next/tree/master/packages/babel-preset-umi#readme",
   "bugs": "https://github.com/umijs/umi-next/issues",
@@ -23,8 +23,8 @@
   "dependencies": {
     "@babel/runtime": "7.17.9",
     "@bloomberg/record-tuple-polyfill": "0.0.4",
-    "@umijs/bundler-utils": "4.0.0-canary.20220608.2",
-    "@umijs/utils": "4.0.0-canary.20220608.2",
+    "@umijs/bundler-utils": "4.0.0-rc.22",
+    "@umijs/utils": "4.0.0-rc.22",
     "core-js": "3.22.4"
   },
   "publishConfig": {
