--- a/packages/max/package.json
+++ b/packages/max/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/max",
-  "version": "4.0.0-canary.20220608.2",
+  "version": "4.0.0-rc.22",
   "description": "@umijs/max",
   "homepage": "https://github.com/umijs/umi-next/tree/master/packages/pro#readme",
   "bugs": "https://github.com/umijs/umi-next/issues",
@@ -33,12 +33,12 @@
     "dev": "pnpm build -- --watch"
   },
   "dependencies": {
-    "@umijs/lint": "4.0.0-canary.20220608.2",
-    "@umijs/plugins": "4.0.0-canary.20220608.2",
+    "@umijs/lint": "4.0.0-rc.22",
+    "@umijs/plugins": "4.0.0-rc.22",
     "antd": "^4.20.6",
     "eslint": "8.15.0",
     "stylelint": "14.8.2",
-    "umi": "4.0.0-canary.20220608.2"
+    "umi": "4.0.0-rc.22"
   },
   "publishConfig": {
     "access": "public"
