--- a/examples/boilerplate-vue/package.json
+++ b/examples/boilerplate-vue/package.json
@@ -9,8 +9,8 @@
     "start": "npm run dev"
   },
   "dependencies": {
-    "@umijs/preset-vue": "4.0.0-rc.22",
-    "umi": "4.0.0-rc.22",
+    "@umijs/preset-vue": "4.0.0-canary.20220609.1",
+    "umi": "4.0.0-canary.20220609.1",
     "vue": "3.2.36"
   }
 }
