--- a/examples/libs/package.json
+++ b/examples/libs/package.json
@@ -16,6 +16,6 @@
     "redux": "^4.2.0",
     "swiper": "^8.1.4",
     "swr": "1.3.0",
-    "umi": "4.0.0-rc.22"
+    "umi": "4.0.0-canary.20220609.1"
   }
 }
