docs: new umi index page (#883)
* docs: new umi index page

* fix: tsc

* docs(hero): loop react and vue

* chore: button hover style

* chore: dark mode

* chore: fetch github stars using stale-while-revalidate policy

* chore: code style

* chore: github icon dark mode with filter+revert(80%)

* chore: more loop words

* chore: use react-text-loop-next

* chore: newsletter service

* fix: typo

--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "prettier-plugin-packagejson": "^2.2.17",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-text-loop-next": "0.0.3",
     "regenerator-runtime": "^0.13.9",
     "resolve": "^1.22.0",
     "rimraf": "^3.0.2",
