chore: extract check local method (#884)
* refactor(mfsu): local dev for mfsu

* refactor: extract check local method

* fix: tsc

* chore: winpath

Co-authored-by: chencheng (云谦) <sorrycc@gmail.com>

Co-authored-by: chencheng (云谦) <sorrycc@gmail.com>

--- a/package.json
+++ b/package.json
@@ -104,5 +104,6 @@
         "redux"
       ]
     }
-  }
+  },
+  "_local": "This flag is used to check if the development in local, Please do not delete."
 }
