--- a/examples/ant-design-pro/package.json
+++ b/examples/ant-design-pro/package.json
@@ -15,7 +15,7 @@
     "@ant-design/pro-layout": "^7.0.1-beta.17",
     "@ant-design/pro-table": "^2.76.0",
     "@antv/l7-react": "^2.3.9",
-    "@umijs/max": "4.0.0-canary.20220615.2",
+    "@umijs/max": "4.0.0-rc.23",
     "ahooks": "^3.4.0",
     "antd": "4.20.6",
     "classnames": "^2.3.1",
