--- a/examples/bundler-vite-demo/package.json
+++ b/examples/bundler-vite-demo/package.json
@@ -8,9 +8,9 @@
   "dependencies": {
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
-    "@umijs/bundler-vite": "4.0.0-canary.20220615.2",
+    "@umijs/bundler-vite": "4.0.0-rc.23",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "umi": "4.0.0-canary.20220615.2"
+    "umi": "4.0.0-rc.23"
   }
 }
