--- a/examples/with-redux/package.json
+++ b/examples/with-redux/package.json
@@ -9,6 +9,6 @@
   "dependencies": {
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
-    "umi": "4.0.0-canary.20220615.2"
+    "umi": "4.0.0-rc.23"
   }
 }
