feat: Server Side Rendering and Server Side Loader (#794)
* feat(ssr): Moving from old pull request (working in progress ...)

* feat(ssr): use startTransition to prevent hydrate failed

* feat(ssr): Remove debug console.log

* feat(ssr): Add serverLoader

* feat(ssr): Remove unnecessary dependency

* feat(ssr): Add examples/ssr-demo

* feat(ssr): Remove svg image in examples/ssr-demo

* feat(ssr): Fix SSR bug if hash is enabled

* fix: tsc

* feat: improve and add TODOs

* chore: improve tmp file generation

* chore: improve ssr builder

* chore: code style

* fix: don't fetch server data on first render

* feat: check manifest config, it's required

* chore: decouple css modules builder

* feat: decoupling esbuild assets and webpack

* fix: assets path

* fix: assets manifest cache problem

* test: fix

* feat: useFetcher and ssr-todos example

* feat: ssr-manifest.json > build-manifest.json

* chore: improve logger style

* feat: support deploy ssr to vercel

* fix: react 17 compatible

Co-authored-by: sorrycc <sorrycc@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,14 @@
 /examples/*/.umi-production
 /examples/*/.output
 /examples/*/api
+/examples/*/server
 /examples/*/.umi-test
 /examples/*/src/.umi
 /examples/*/src/.umi-production
 /examples/libs/monorepo/foo/.mfsu
 /examples/libs/monorepo/foo/.umi
 /examples/*/dist
+/examples/*/.env.local
 /examples/*/node_modules
 /packages/*/node_modules
 /packages/*/dist
@@ -19,6 +21,7 @@
 /packages/*/src/**/fixtures/*/.umi
 /packages/*/src/**/fixtures/*/.umi-production
 /packages/plugin-docs/client/theme-doc/tailwind.out.css
+/packages/preset-umi/fixtures/**/dist
 /packages/preset-umi/devToolApp/.umi
 /packages/preset-umi/devToolApp/.umi-production
 /packages/preset-umi/devToolApp/node_modules
