--- a/examples/with-dva/package.json
+++ b/examples/with-dva/package.json
@@ -8,7 +8,7 @@
     "start": "npm run dev"
   },
   "dependencies": {
-    "@umijs/plugins": "4.0.0-rc.24",
-    "umi": "4.0.0-rc.24"
+    "@umijs/plugins": "4.0.0-canary.20220620.1",
+    "umi": "4.0.0-canary.20220620.1"
   }
 }
