--- a/examples/with-monaco-editor/package.json
+++ b/examples/with-monaco-editor/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "monaco-editor": "^0.33.0",
     "monaco-editor-webpack-plugin": "^7.0.1",
-    "umi": "4.0.0-rc.24"
+    "umi": "4.0.0-canary.20220620.1"
   },
   "devDependencies": {
     "@types/node": "^17.0.42",
