--- a/examples/with-vanilla-extract/package.json
+++ b/examples/with-vanilla-extract/package.json
@@ -10,6 +10,6 @@
     "@vanilla-extract/babel-plugin": "^1.1.6",
     "@vanilla-extract/css": "^1.7.0",
     "@vanilla-extract/webpack-plugin": "^2.1.9",
-    "umi": "4.0.0-canary.20220620.1"
+    "umi": "4.0.0"
   }
 }
