chore: 🔧 actions 相关配置更新 (#961)
cypress 上传  cypres dashborad 方便 debug
codecov 移除 annotation

Co-authored-by: pshu <pishu.spf@antfin.com>

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -58,7 +58,7 @@ jobs:
         with:
           start: pnpm run preview
           wait-on: 'http://127.0.0.1:9527'
-          command: pnpm run e2e
+          command: pnpm run e2e  -- --record --key 0483223d-3e79-4284-b87a-d49dcfe9faab
           browser: chrome
           working-directory: ./examples/max
           install: false
