chore: move `@hapi/joi` to utils pkg

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -25,9 +25,11 @@
     "pino": "7.11.0"
   },
   "devDependencies": {
+    "@hapi/joi": "17.1.1",
     "@types/color": "3.0.3",
     "@types/cross-spawn": "6.0.2",
     "@types/debug": "4.1.7",
+    "@types/hapi__joi": "17.1.8",
     "@types/lodash": "4.14.182",
     "@types/mustache": "4.1.2",
     "@types/prompts": "^2.0.14",
@@ -89,7 +91,8 @@
       "semver",
       "strip-ansi",
       "yargs-parser",
-      "pirates"
+      "pirates",
+      "@hapi/joi"
     ],
     "externals": {
       "address": "$$LOCAL",
@@ -110,7 +113,8 @@
       "semver": "$$LOCAL",
       "strip-ansi": "$$LOCAL",
       "yargs-parser": "$$LOCAL",
-      "pirates": "$$LOCAL"
+      "pirates": "$$LOCAL",
+      "@hapi/joi": "$$LOCAL"
     }
   }
 }
