--- a/packages/lint/package.json
+++ b/packages/lint/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "build": "pnpm tsc",
     "build:deps": "umi-scripts bundleDeps",
-    "dev": "pnpm build -- --watch"
+    "dev": "pnpm build --watch"
   },
   "dependencies": {
     "@babel/core": "7.17.9",
