--- a/packages/preset-vue/package.json
+++ b/packages/preset-vue/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "build": "pnpm tsc",
     "build:deps": "umi-scripts bundleDeps",
-    "dev": "pnpm build -- --watch"
+    "dev": "pnpm build --watch"
   },
   "dependencies": {
     "@umijs/renderer-vue": "4.0.1",
