--- a/packages/renderer-vue/package.json
+++ b/packages/renderer-vue/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "build": "pnpm tsc",
     "build:deps": "umi-scripts bundleDeps",
-    "dev": "pnpm build -- --watch"
+    "dev": "pnpm build --watch"
   },
   "peerDependencies": {
     "vue": ">=3.2.31",
