build(e2e): 👷 hide cypress record key

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -58,10 +58,11 @@ jobs:
         with:
           start: pnpm run preview
           wait-on: 'http://127.0.0.1:9527'
-          command: pnpm run e2e --record --key 0483223d-3e79-4284-b87a-d49dcfe9faab
+          command: pnpm run e2e --record --key ${cypress_key}
           browser: chrome
           working-directory: ./examples/max
           install: false
           install-command: pnpm i cypress
         env:
+          cypress_key: ${{secrets.CYPRESS_KEY}}
           PORT: 9527
