build: 👷 windows use different env variable

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -55,10 +55,25 @@ jobs:
         run: pnpm umi-scripts turbo --cmd build --filter ./examples/max...
 
       - uses: cypress-io/github-action@v4
+        if: matrix.os == 'ubuntu-latest'
         with:
           start: pnpm run preview
           wait-on: 'http://127.0.0.1:9527'
           command: pnpm run e2e --record --key ${cypress_key}
+          browser: chrome
+          working-directory: ./examples/max
+          install: false
+          install-command: pnpm i cypress
+        env:
+          cypress_key: ${{secrets.CYPRESS_KEY}}
+          PORT: 9527
+
+      - uses: cypress-io/github-action@v4
+        if: matrix.os == 'windows-latest'
+        with:
+          start: pnpm run preview
+          wait-on: 'http://127.0.0.1:9527'
+          command: pnpm run e2e --record --key %cypress_key%
           browser: chrome
           working-directory: ./examples/max
           install: false
