--- a/packages/bundler-esbuild/package.json
+++ b/packages/bundler-esbuild/package.json
@@ -2,11 +2,11 @@
   "name": "@umijs/bundler-esbuild",
   "version": "4.0.2",
   "description": "@umijs/bundler-esbuild",
-  "homepage": "https://github.com/umijs/umi-next/tree/master/packages/bundler-esbuild#readme",
-  "bugs": "https://github.com/umijs/umi-next/issues",
+  "homepage": "https://github.com/umijs/umi/tree/master/packages/bundler-esbuild#readme",
+  "bugs": "https://github.com/umijs/umi/issues",
   "repository": {
     "type": "git",
-    "url": "https://github.com/umijs/umi-next"
+    "url": "https://github.com/umijs/umi"
   },
   "license": "MIT",
   "main": "dist/index.js",
