--- a/packages/renderer-vue/package.json
+++ b/packages/renderer-vue/package.json
@@ -2,11 +2,11 @@
   "name": "@umijs/renderer-vue",
   "version": "4.0.2",
   "description": "@umijs/renderer-vue",
-  "homepage": "https://github.com/umijs/umi-next/tree/master/packages/renderer-vue#readme",
-  "bugs": "https://github.com/umijs/umi-next/issues",
+  "homepage": "https://github.com/umijs/umi/tree/master/packages/renderer-vue#readme",
+  "bugs": "https://github.com/umijs/umi/issues",
   "repository": {
     "type": "git",
-    "url": "https://github.com/umijs/umi-next"
+    "url": "https://github.com/umijs/umi"
   },
   "license": "MIT",
   "sideEffects": false,
